# StuntRPA

./: README.md  README.pt-BR.md  pyproject.toml
docs/: api.md  api.pt-BR.md  architecture.md  architecture.pt-BR.md
src/stuntrpa/: __init__.py  cli.py  constants.py
src/stuntrpa/recorder/: __init__.py  capture.py  injection.py  snapshot.py
src/stuntrpa/replayer/: __init__.py  engine.py  matcher.py
src/stuntrpa/storage/: __init__.py  paths.py  scenario.py
tests/: test_cli.py  test_engine.py  test_injection.py  test_matcher.py  test_storage.py
