[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stuntrpa"
version = "0.1.0"
description = "Digital Twin ecosystem for RPA - Record & Replay web sessions"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "playwright>=1.40.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
stuntrpa = "stuntrpa.cli:app"

[project.urls]
Homepage = "https://github.com/JoaoAnacleto/StuntRPA"
Repository = "https://github.com/JoaoAnacleto/StuntRPA"
Issues = "https://github.com/JoaoAnacleto/StuntRPA/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/stuntrpa"]

[tool.ruff]
line-length = 100
target-version = "py310"
